# lava_lamp

./: .gitignore  INTERFACE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run_lavalamp.py
jsx/: lavalamp.jsx  lavalamp_OLD.jsx
lavalamp/: __init__.py  __main__.py  app.py  canvas.py  controls.py  engine.py  main_window.py  palettes.py  renderer.py
tests/: test_engine.py  test_renderer.py
